removed circular reference made @bean static in security config

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <link rel="stylesheet" type="text/css"
-  th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+  th:href="@{https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />
+
 
 <title>Registration</title>
 </head>
@@ -46,9 +47,10 @@
   </div>
 
   <script type="text/javascript"
-     th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
+     th:src="@{https://cdn.jsdelivr.net/webjars/org.webjars/jquery/3.2.1/jquery.min.js/}"></script>
   <script type="text/javascript"
-     th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+     th:src="@{https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+
 
 </body>
 </html>
